# Cogwheel-DNS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
Research/: AI DNS Adblock Research & Development.md  Cogwheel_Deep_Research.md
apps/cogwheel-desktop/: Cargo.toml
apps/cogwheel-desktop/src/: main.rs
apps/cogwheel-server/: Cargo.toml
apps/cogwheel-server/src/: main.rs
apps/cogwheel-web/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/cogwheel-web/src/: App.tsx  index.css  main.rs  main.tsx
apps/cogwheel-web/src/components/: app-layout.tsx  app-sidebar.tsx  error-boundary.tsx  shared.tsx  site-header.tsx
apps/cogwheel-web/src/hooks/: use-toast.ts
crates/cogwheel-api/: Cargo.toml
crates/cogwheel-api/src/: lib.rs
crates/cogwheel-classifier/: Cargo.toml
crates/cogwheel-classifier/src/: lib.rs
crates/cogwheel-dns-core/: Cargo.toml
crates/cogwheel-dns-core/src/: lib.rs
crates/cogwheel-lists/: Cargo.toml
crates/cogwheel-lists/src/: lib.rs
crates/cogwheel-policy/: Cargo.toml
crates/cogwheel-policy/src/: lib.rs
crates/cogwheel-services/: Cargo.toml
crates/cogwheel-services/src/: lib.rs
crates/cogwheel-storage/: Cargo.toml
crates/cogwheel-storage/migrations/: 0001_init.sql  0002_ruleset_artifacts.sql  0007_device_allowed_domains.sql  0009_notification_deliveries.sql
crates/cogwheel-storage/src/: lib.rs
crates/cogwheel-sync/: Cargo.toml
crates/cogwheel-sync/src/: lib.rs
(+29 files in other folders)
