[package]
name = "cogwheel-api"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
config.workspace = true
humantime-serde.workspace = true
prometheus-client.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
